--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,8 @@ dependencies {
 	implementation 'org.jetbrains:annotations:22.0.0'
 	implementation 'mysql:mysql-connector-java:8.0.33'
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '3.2.3'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+
 
 
 }
